devops/k8s/dev/datastewardship/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: datastewardship-dev
  labels:
    name: datastewardship-dev
